--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "online-upload": "node node-tools/online.js upload"
   },
   "dependencies": {
+    "archiver": "^5.3.1",
     "core-js": "^3.8.3",
+    "node-ssh": "^13.0.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
